style: 样式美化，内容垂直间距调整

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -486,6 +486,11 @@ html {
 
 #VPContent.is-home {
   padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  }
+  
+  .VPHero {
+    padding-bottom: 0px !important;
 }
 
 .VPHero .container {
