style: 优化团队英雄墙头部padding

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -502,3 +502,9 @@ html {
 .vp-doc [class*='language-'] code .highlighted {
   background-color: rgba(0, 255, 149, 0.295) !important;
 }
+
+/* 个人英雄页高度 */
+
+.VPTeamPageTitle {
+  padding-top: 0 !important;
+}
